# alpha-radar

./: .gitignore  CLAUDE.md  README.md  rust-toolchain.toml
.github/: release-notes.md
.github/workflows/: ci.yml  release.yml
docs/: 00-requirements.md  01-architecture.md  02-indicators.md  03-scoring.md  04-data-spec.md  05-ui-spec.md  06-implementation-plan.md  07-testing.md  08-decisions-adr.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chart/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: DropZone.tsx  MtfSummary.tsx  MultiPaneChart.tsx  ProximityBar.tsx  RankingTable.tsx  ScoreCell.tsx  SignalBadge.tsx
frontend/lib/: chart-visibility.ts  invoke.ts  radar-view.ts  scan-store.tsx  types.ts  ui-prefs.ts
sidecar/: README.md  fetch.py  mock_fetch.py  pyproject.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: chart.rs  mod.rs
src-tauri/src/data/: cache.rs  csv.rs  mod.rs  sidecar.rs  universe.rs
src-tauri/src/eval/: mod.rs  tuning.rs
src-tauri/src/indicators/: mean_reversion.rs  mod.rs  momentum.rs  normalize.rs  trend.rs  volatility.rs
src-tauri/src/proximity/: mod.rs
src-tauri/src/regime/: mod.rs
src-tauri/src/scoring/: composite.rs  mod.rs  mtf.rs  weights.rs
src-tauri/tests/: e2e_live.rs  golden.rs  marker_experiment.rs
tests/fixtures/: sample_basic_1d.csv  sample_basic_1d.golden.json  sample_watchlist.csv
tools/: package-sidecar.ps1
tools/golden/: gen_golden.py  pyproject.toml
