[package]
name = "alpha-radar"
version = "0.1.0"
description = "Alpha Radar — Swing Entry Confluence Scanner"
authors = ["AILEAP"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "alpha_radar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
# Native file-open dialog for the CSV picker (P5).
tauri-plugin-dialog = "2"
thiserror = "2.0"
# Cross-symbol parallelism for batch scans (used from P4 onward).
rayon = "1.10"
# CSV watchlist parsing (P4).
csv = "1.3"
# Decode non-UTF-8 watchlist CSVs (Excel on JP Windows saves Shift_JIS/CP932).
encoding_rs = "0.8"
# SQLite cache; `bundled` compiles SQLite from source (no system lib needed).
rusqlite = { version = "0.32", features = ["bundled"] }
